--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
+    "@tamagui/babel-plugin": "^1.116.2",
+    "@tamagui/config": "^1.116.2",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-web": "~0.19.10",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.3"
+    "react-native": "0.74.5",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-web": "~0.19.10",
+    "tamagui": "^1.116.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
