--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~3.2.3",
     "@tamagui/babel-plugin": "^1.116.2",
     "@tamagui/config": "^1.116.2",
+    "@tamagui/lucide-icons": "^1.116.2",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "immutability-helper": "^3.1.1",
