--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react-native": "0.74.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-web": "~0.19.10",
-    "tamagui": "^1.116.2"
+    "tamagui": "^1.116.2",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/uuid": "^10.0.0",
     "typescript": "~5.3.3"
   },
   "private": true
