--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "immutability-helper": "^3.1.1",
+    "lottie-react-native": "^7.0.0",
     "react": "18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
