--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
-    "@tamagui/babel-plugin": "^1.116.2",
-    "@tamagui/config": "^1.116.2",
-    "@tamagui/lucide-icons": "^1.116.2",
+    "@tamagui/babel-plugin": "^1.116.9",
+    "@tamagui/config": "^1.116.9",
+    "@tamagui/lucide-icons": "^1.116.9",
+    "@tamagui/toast": "^1.116.9",
+    "burnt": "^0.12.2",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "immutability-helper": "^3.1.1",
@@ -26,7 +28,7 @@
     "react-native": "0.74.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-web": "~0.19.10",
-    "tamagui": "^1.116.2",
+    "tamagui": "^1.116.9",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
