--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@dotlottie/react-player": "^1.6.19",
     "@expo/metro-runtime": "~3.2.3",
     "@tamagui/babel-plugin": "^1.116.9",
     "@tamagui/config": "^1.116.9",
