chore: upgrade expo

--- a/package.json
+++ b/package.json
@@ -12,29 +12,31 @@
   },
   "dependencies": {
     "@dotlottie/react-player": "^1.6.19",
-    "@expo/metro-runtime": "~3.2.3",
+    "@expo/metro-runtime": "~4.0.1",
+    "@lingui/react": "^5.2.0",
     "@tamagui/babel-plugin": "^1.116.9",
     "@tamagui/config": "^1.116.9",
     "@tamagui/lucide-icons": "^1.116.9",
     "@tamagui/toast": "^1.116.9",
     "burnt": "^0.12.2",
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.37",
+    "expo-status-bar": "~2.0.1",
     "immutability-helper": "^3.1.1",
-    "lottie-react-native": "^7.0.0",
-    "react": "18.2.0",
+    "lottie-react-native": "7.1.0",
+    "react": "18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-reanimated": "~3.10.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-reanimated": "~3.16.1",
     "react-native-web": "~0.19.10",
     "tamagui": "^1.116.9",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@lingui/babel-plugin-lingui-macro": "^5.2.0",
+    "@types/react": "~18.3.12",
     "@types/uuid": "^10.0.0",
     "typescript": "~5.6.3"
   },
