--- a/package.json
+++ b/package.json
@@ -41,5 +41,25 @@
     "@types/uuid": "^10.0.0",
     "typescript": "~5.6.3"
   },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "tamagui",
+          "@dotlottie/react-player",
+          "@expo/metro-runtime",
+          "@tamagui/babel-plugin",
+          "@tamagui/config",
+          "@tamagui/lucide-icons",
+          "@tamagui/toast",
+          "@tamagui/core",
+          "immutability-helper",
+          "react-dnd",
+          "react-dnd-html5-backend",
+          "uuid"
+        ]
+      }
+    }
+  },
   "private": true
 }
