--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "onboarding-studio",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,16 +11,20 @@
     "type:check": "tsc --noEmit"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.9",
     "@dotlottie/react-player": "^1.6.19",
     "@expo/metro-runtime": "~4.0.1",
     "@lingui/react": "^5.2.0",
+    "@lottiefiles/dotlottie-react": "^0.13.0",
     "@tamagui/babel-plugin": "^1.116.9",
     "@tamagui/config": "^1.116.9",
+    "@tamagui/core": "^1.116.9",
     "@tamagui/lucide-icons": "^1.116.9",
     "@tamagui/toast": "^1.116.9",
-    "@tamagui/core": "^1.116.9",
+    "babel-preset-expo": "^12.0.9",
     "burnt": "^0.12.2",
     "expo": "^52.0.37",
+    "expo-router": "^4.0.17",
     "expo-status-bar": "~2.0.1",
     "immutability-helper": "^3.1.1",
     "lottie-react-native": "7.1.0",
@@ -36,8 +40,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
     "@lingui/babel-plugin-lingui-macro": "^5.2.0",
+    "@types/react": "~18.3.12",
     "@types/uuid": "^10.0.0",
     "typescript": "~5.6.3"
   },
