--- a/package.json
+++ b/package.json
@@ -45,6 +45,12 @@
     "@types/uuid": "^10.0.0",
     "typescript": "~5.6.3"
   },
+  "lingui": {
+    "locales": [
+      "en",
+      "fr"
+    ]
+  },
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
