--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@expo/metro-runtime": "~4.0.1",
     "@lingui/react": "^5.2.0",
     "@lottiefiles/dotlottie-react": "^0.13.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.49.1",
     "@tamagui/babel-plugin": "^1.116.9",
     "@tamagui/config": "^1.116.9",
     "@tamagui/core": "^1.116.9",
