--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.49.1",
-    "@tamagui/babel-plugin": "^1.116.9",
-    "@tamagui/config": "^1.116.9",
-    "@tamagui/core": "^1.116.9",
-    "@tamagui/lucide-icons": "^1.116.9",
-    "@tamagui/toast": "^1.116.9",
+    "@tamagui/babel-plugin": "^1.125.26",
+    "@tamagui/config": "^1.125.26",
+    "@tamagui/core": "^1.125.26",
+    "@tamagui/lucide-icons": "^1.125.26",
+    "@tamagui/toast": "^1.125.26",
     "babel-preset-expo": "^12.0.9",
     "burnt": "^0.12.2",
+    "dnd-core": "^16.0.1",
     "expo": "^52.0.39",
     "expo-router": "^4.0.19",
     "expo-status-bar": "~2.0.1",
@@ -38,7 +39,7 @@
     "react-native": "0.76.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-web": "~0.19.10",
-    "tamagui": "^1.116.9",
+    "tamagui": "^1.125.26",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
