--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tamagui/core": "^1.125.26",
     "@tamagui/lucide-icons": "^1.125.26",
     "@tamagui/toast": "^1.125.26",
+    "@tanstack/react-query": "^5.69.0",
     "babel-preset-expo": "^12.0.9",
     "burnt": "^0.12.2",
     "dnd-core": "^16.0.1",
