--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-query": "^5.69.0",
     "babel-preset-expo": "^12.0.9",
     "burnt": "^0.12.2",
+    "date-fns": "^4.1.0",
     "dnd-core": "^16.0.1",
     "expo": "^52.0.39",
     "expo-router": "^4.0.19",
