--- a/package.json
+++ b/package.json
@@ -77,5 +77,6 @@
       }
     }
   },
-  "private": true
+  "private": true,
+  "packageManager": "pnpm@10.7.0+sha256.35cab26953bf90847e798839db58c9a2a82d526b7af179fd2a103c18242cadc6"
 }
